opam-version: "2.0"
name: "qinap"
version: "~dev"
synopsis: "A (very small) monadic parsing library"
maintainer: "Guilhermo Costa <guillecosta@protonmail.ch>"
authors: "Guilhermo Costa <guillecosta@protonmail.ch>"
license: "Unlicense"
homepage: "https://github.com/guillecosta/qinap"
bug-reports: "https://github.com/guillecosta/qinap/issues"
depends: [
  "dune" {build}
  "base"
]
dev-repo: "git+https://github.com/guillecosta/qinap"
url {
  src: "git+file:///home/gui/Programming/qinap#master"
}
